<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:useDefaultMargins="true">

        <Space
            android:layout_width="50dip"
            android:layout_height="50dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="end"
            android:text="@string/tx_SSID" />

        <EditText
            android:id="@+id/tx_SSID"
            android:layout_columnSpan="1"
            android:autofillHints=""
            android:ems="9"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="end"
            android:text="@string/tx_BSSID" />

        <EditText
            android:id="@+id/tx_BSSID"
            android:layout_columnSpan="1"
            android:autofillHints=""
            android:ems="9"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="end"
            android:text="@string/tx_time" />

        <EditText
            android:id="@+id/tx_time"
            android:layout_columnSpan="1"
            android:autofillHints=""
            android:ems="9"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:useDefaultMargins="true">

        <Space
            android:layout_width="15dip"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add" />

        <Button
            android:id="@+id/btn_show_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_all" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear" />

        <Button
            android:id="@+id/btn_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete_all" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="6"
        android:useDefaultMargins="true">

        <Space
            android:layout_width="15dip"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id" />

        <EditText
            android:id="@+id/tx_id"
            android:layout_width="65dip"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:inputType="number"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_update" />

        <Button
            android:id="@+id/btn_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_query" />
        <Button
            android:id="@+id/btn_query_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_query_time"
            android:layout_column="3"
            android:layout_columnSpan="3" />

    </GridLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dip" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:paddingLeft="20dip"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>